--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -1,3 +1,4 @@
+baseURL = "https://strongaya.github.io/AYA-cancer-data-schema/"
 theme = "hugo-book"
 title = "STRONG AYA Cancer Codebook"
 
@@ -21,7 +22,7 @@ weight = 20
 BookToC = false
 BookFavicon = 'favicon.ico'
 BookLogo = 'STRONG-AYA-web-logo.svg'
-BookSection = 'docs'
+BookSection = 'AYA-cancer-data-schema'
 
 # Used for 'Last Modified' and 'Edit this page' links.
 BookRepo = 'https://github.com/STRONGAYA/AYA-cancer-data-schema'
