--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -3,15 +3,18 @@ theme = "hugo-book"
 title = "STRONG AYA Codebook"
 enableGitInfo = true
 
+[markup]
+[markup.goldmark.renderer]
+unsafe = true
+
+[markup.tableOfContents]
+startLevel = 1
+
 [menu]
 
 [[menu.after]]
-name = ""
-weight = 1
-
-[[menu.after]]
-name = "Quick Links"
-weight = 5
+name = " "
+weight = 0
 
 [[menu.after]]
 name = "About STRONG AYA"
@@ -19,20 +22,26 @@ url = "https://strongaya.eu"
 weight = 10
 
 [[menu.after]]
-name = "Github"
-url = "https://github.com/STRONGAYA/AYA-cancer-data-schema"
+name = "STRONG AYA GitHub"
+url = "https://github.com/STRONGAYA"
 weight = 20
+
+[[menu.after]]
+name = "STRONG AYA Codebook GitHub"
+url = "https://github.com/STRONGAYA/AYA-cancer-data-schema"
+weight = 30
 
 [[menu.after]]
 name = "Associated scientific publication (in preparation)"
 url = ""
-weight = 30
+weight = 40
 
 [params]
 BookTheme = 'auto'
 BookToC = false
 BookFavicon = 'favicon.ico'
 BookSection = 'AYA-cancer-data-schema'
+BookDateFormat = 'January 2, 2006'
 
 # Used for 'Last Modified' and 'Edit this page' links.
 BookRepo = 'https://github.com/STRONGAYA/AYA-cancer-data-schema'
