--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -23,7 +23,7 @@ url = "https://github.com/STRONGAYA"
 weight = 20
 
 [[menu.after]]
-name = "Associated scientific publication (in preparation)"
+name = "Associated scientific publication"
 url = ""
 weight = 40
 
